src/components/ui/popups/HolidayPopup.module.css
.popupOverlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: hsla(80, 4%, 16%, 0.7);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 9998;
}

.popupContainer {
	background: #fff;
	padding: 20px;
	border-radius: 8px;
	border: 4px solid hsl(37, 90%, 51%);
	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
	max-width: 800px;
	width: 90%;
	text-align: center;
	z-index: 9999;
	position: relative;
}

.closeIcon {
	position: absolute;
	top: 15px;
	right: 15px;
	width: 24px;
	cursor: pointer;
}

.popupContent {
	padding: 2.5rem;
	color: var(--text-primary);
	display: flex;
	flex-direction: column;
	gap: 1rem;

	.popupTitle {
		font-size: clamp(1.5rem, 4vw, 2.5rem);
	}

	h3 {
		font-size: clamp(1rem, 4vw, 1.5rem);
	}
}

.popupTitle {
	font-size: 3rem;
	font-weight: var(--fw-bold);
	color: var(--heading-primary);
	margin-bottom: 1rem;
}

.holidayList {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;

	li {
		font-size: clamp(1rem, 3vw, 1.25rem);
	}
}

@media (max-width: 600px) {
	.popupContainer {
		padding: 1rem;
	}

	.popupContent {
		padding: 1.5rem;
		font-size: 1rem;
	}

	.popupTitle {
		font-size: 2rem;
	}
}

